# lippukala

./: .prettierignore
lippukala/static/lippukala/: pos-qr.js  pos.css  pos.js  rxing_qr_wasm.js  rxing_qr_wasm_bg.wasm  rxing_wasm.js  rxing_wasm_bg.wasm
lippukala/templates/lippukala/: pos.html
rxing-qr-wasm/: Cargo.toml  Makefile  README.md
rxing-qr-wasm/src/: lib.rs
